--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -226,11 +226,6 @@ Resources:
           SourceCidrIp: 0.0.0.0/0
           IpProtocol: tcp
           NicType: internet
-        - PortRange: 3001/3001
-          Priority: 1
-          SourceCidrIp: 100.104.0.0/16
-          IpProtocol: tcp
-          NicType: intranet
   InstanceGroup:
     Type: ALIYUN::ECS::InstanceGroup
     Properties:
@@ -262,7 +257,7 @@ Resources:
         Ref: EcsInstanceType
       SystemDiskCategory: cloud_essd
       SystemDiskSize: 200
-      # InternetMaxBandwidthOut: 5
+      InternetMaxBandwidthOut: 2
       IoOptimized: optimized
       MaxAmount: 1
   RunInstallCommand:
@@ -316,7 +311,7 @@ Outputs:
               - 0
               - Fn::GetAtt:
                   - InstanceGroup
-                  - PrivateIps
+                  - PublicIps
 Metadata:
   ALIYUN::ROS::Interface:
     ParameterGroups:
